# hardware-accelerated-matrix-operations

./: CMakeLists.txt  README.md
data/: CMakeLists.txt  b.txt
kernel/: CMakeLists.txt  kernel.cl
src/: CMakeLists.txt  main.cpp  resourcehandler.cpp  resourcehandler.h
